updated the conclusion section

--- a/NLP-NeuralNet.ipynb
+++ b/NLP-NeuralNet.ipynb
@@ -68,6 +68,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using regex to convert words such as LOOOOL to LOL. This method does not work for infrequent edge cases"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -113,6 +120,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Removing stopwords."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -124,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tweets = []\n",
@@ -1196,9 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1513,6 +1523,26 @@
    "source": [
     "scores = model.evaluate(XTestAirline, yTestAirline, batch_size = 32)\n",
     "print('Test accuracy:', scores[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font size=\"5\"> In conclusion, bag-of-words method is a good starting point to NLP. For production level stuff this approach has the following shortcomings:\n",
+    "    \n",
+    "    1. No semantic relation between words:\n",
+    "    \n",
+    "        1. \"Eat to live\" and \"Live to eat\"\n",
+    "    \n",
+    "        2. “This is good” and “Is this good?”\n",
+    "    \n",
+    "    2. No sarcasm detection\n",
+    "    \n",
+    "    3. Massive feature vectors\n",
+    "\n",
+    "It is possible to solve some of these problems by using n-grams, though it i\n",
+    "</font>"
    ]
   },
   {
